if (PROTOBUF_FOUND)
	if (PURPLE_FOUND)
		ADD_SUBDIRECTORY(libpurple)
	endif()

	if (IRC_FOUND)
		ADD_SUBDIRECTORY(libcommuni)
	endif()

	if (ENABLE_SWIFTEN)
		ADD_SUBDIRECTORY(swiften)
	endif()

	ADD_SUBDIRECTORY(template)
	if(ENABLE_TWITTER)
		ADD_SUBDIRECTORY(twitter)
	endif()
	if (NOT WIN32)
		if(ENABLE_SMSTOOLS3)
			ADD_SUBDIRECTORY(smstools3)
		endif()
		if(ENABLE_FROTZ)
			ADD_SUBDIRECTORY(frotz)
		endif()
	endif()
endif()
